--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -13,4 +13,5 @@ header {
         margin-left: 0; 
         padding-left: $base-unit * 0.3;
     }
+    a, a:hover { text-decoration: underline }
 }
