--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,6 +1,6 @@
-$primary: 		    #8E24AA;
+$primary: 		    #d334ff;
 $black: 	        #000;
-$action: 	        #26C6DA;
+$action: 	        #11e3ff;
 $disabled:          #808080;
 $white:             #fff;
 $base-unit: 		  1rem;
